## Process this file with automake to produce Makefile.in

SUBDIRS = \
		  SiH4 \
		  NaCl \
		  C

EXTRA_DIST = \
	inguess.dat \
	input.dat \
	posinp \
	SiH4

CLEANFILES = wavefunction*

all:
	@echo "======================================="
	@echo "Type 'make check' in the directory test"
	@echo "======================================="

