SUBDIRS = c fortran


#bin_PROGRAMS = square square_not_shared mull_array
#
#square_SOURCES = square.cu
#square_not_shared_SOURCES = square_not_shared.cu
#mull_array_SOURCES = mull_array.cu
#
#square_LIBTOOLFLAGS= $(AM_LIBTOOLFLAGS) --tag=CUDA
#
#
#links = "-L@prefix@/lib/ -ls_gpu -lmpi"
#flags = "-I@prefix@/include "
#
##AM_CPPFLAGS += "-I@prefix@/include "
##AM_LDADD += "-L@prefix@/lib/ -ls_gpu -lmpi"
#
##square_LDADD = $(links)
##squarenot_shared_LDADD = $(links)
##mull_array_LDADD = $(links)
#
##NVCC = @NVCC@
##RANLIB = @NVCC@ -lib
#
#SUFFIXES = .cu
#
#.cu:
#	$(NVCC) @CUDA_FLAGS@ $(AM_CPPFLAGS) $(flags) $(links) -c $< -o $@
#
